Created steps on how to create an html file

--- a/journal.html
+++ b/journal.html
@@ -4,6 +4,17 @@
         <title>Chad's Journal</title>
     </head>
     <body>
+        <h1>Chad's Journal to HTML<i>*bow*</i></h1>
 
+        <h2>Steps on creating a html file</h2>
+        <p>Its very easy just follow the steps below:</p>
+        <ol>
+            <li>Create your work folder and place it to your desktop</li>
+            <li>Open <b>Visual Studio Code</b> and open your work folder</li>
+            <li>Make it as a repo by initializing it at Source Control</li>
+            <li>Create a new file under the name <b>journal.html</b></li>
+            <li>???</li>
+            <li>Profit</li>
+        </ol>
     </body>
 </html>
