--- a/journal.html
+++ b/journal.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Chad's Journal</title>
+        <link rel="stylesheet" href="design.css">
     </head>
     <body>
         <h1>Chad's Journal to HTML<i>*bow*</i></h1>
