--- a/journal.html
+++ b/journal.html
@@ -17,5 +17,40 @@
             <li>???</li>
             <li>Profit</li>
         </ol>
+
+        <table>
+            <tr>
+                <th>Element</th>
+                <th>Definition</th>
+            </tr>
+            <tr>
+                <td>!DOCTYPE html</td>
+                <td>Tells the browser that the file is a HTML</td>
+            </tr>
+            <tr>
+                <td>HTML</td>
+                <td>Initiates HTML</td>
+            </tr>
+            <tr>
+            <tr>
+                <td>Head</td>
+                <td>A collection of metadata for the document</td>
+            </tr>
+                <td>Title</td>
+                <td>Represents the title of the document</td>
+            </tr>
+            <tr>
+                <td>Link</td>
+                <td>Allows to link other documents</td>
+            </tr>
+            <tr>
+                <td>Body</td>
+                <td>Contains the documents data</td>
+            </tr>
+            <tr>
+                <td></td>
+                <td></td>
+            </tr>
+        </table>
     </body>
 </html>
