Linked CSS Added image

--- a/journal.html
+++ b/journal.html
@@ -2,7 +2,6 @@
 <html>
     <head>
         <title>Chad's Journal</title>
-        <link rel="stylesheet" href="design.css">
     </head>
     <body>
         <h1>Chad's Journal to HTML<i>*bow*</i></h1>
@@ -52,5 +51,7 @@
                 <td></td>
             </tr>
         </table>
+
+        <a href="https://w3schools.com/" target="_blank"><img src="assets/neckbeard.jpg" width="50%" height="50%"></a>
     </body>
 </html>
